--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
     </style>
     <!-- Microsoft Clarity-->
     <!-- googleアナリティクス-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VQCMS90EW"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5VQCMS90EW');
+    </script>
     <!-- ボタン押下時の動作-->
     <script>
         $('#page-link a[href*="#"]').click(function () {
@@ -43,7 +51,7 @@
         <!--フローティングボタン-->
         <div id="button" class="float-button__wrap" >
             <a href="#iframe">
-            <img alt="サンプル画像です" src="btn_cv.png"></a>
+            <img alt="サンプル画像です" src="btn_cv_dental_b.png"></a>
         </div>
     <div style="text-align: center" >
         <p>
@@ -55,7 +63,7 @@
         </p>
         <p>
             <section class="area" id="iframe">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdeftTxx2145_6NBvSb5U8KFDChc9Kr5l0E2uIO9iOa2QmsLg/viewform?embedded=true" width="640" height="2928" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbqCam19MoaQX5rN0kk8BQnpT8ThN6Wc2I9pxl5HWFsdugjQ/viewform?embedded=true" width="640" height="4650" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
         </p>
     </div> 
 </body>
